2007-11-13  Thomas Schwinge  <tschwinge@gnu.org>

	* node.c (netfs_attempt_utimes): Adapt to ``struct stat'' changes.

2004-10-23  Marcus Brinkmann  <marcus@gnu.org>

	* usermux-xinl.c (__OPTIMIZE__): Define to 1 instead of nothing.

2002-05-13  Roland McGrath  <roland@frob.com>

	* mux.c (netfs_attempt_chmod): Handle MODE arg with no S_IFMT bits set.

	* leaf.c (create_user_node): Set NEW->nn_translated appropriately.
	* usermux.c (main): Set netfs_root_node->nn_translated to zero.

2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* usermux.c (netfs_server_name, netfs_server_version): New
	variables.

2001-02-12  Marcus Brinkmann  <marcus@gnu.org>

	* usermux.c (options): Include <version.h>.  Add global variable
	ARGP_PROGRAM_VERSION.  Add period to DOC.

2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.

2000-07-18  Thomas Bushnell, BSG  <tb@mit.edu>

	* mux.c (free_name): Fix typo in comment.
	* usermux.c: Likewise.
	* usermux.h: Likewise
	(struct usermux): Likewise.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* mux.c: Add #include <sys/mman.h> for munmap decl.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* mux.c (get_dirents): Use mmap instead of vm_allocate.
	(netfs_get_dirents): Likewise.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* mux.c (get_dirents): Use munmap instead of vm_deallocate.
	(netfs_get_dirents): Likewise.

1999-02-28  Roland McGrath  <roland@baalperazim.frob.com>

	* node.c (netfs_attempt_utimes): Fix typo in last change.

Sun Jan 31 18:41:17 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* node.c (netfs_attempt_utimes): Handle new possibility that ATIME
	or MTIME might be null.

1998-10-20  Roland McGrath  <roland@baalperazim.frob.com>
